fix(views): fix overflow scrolling on iOS

--- a/src/adapter/dom-adapter/components/app/styles.css
+++ b/src/adapter/dom-adapter/components/app/styles.css
@@ -35,6 +35,7 @@ main > * {
   max-width: 100vw;
   overflow-x: hidden;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
   padding-bottom: 10vh;
   contain: strict;
 }
