--- a/src/adapter/dom-adapter/components/bottom-bar/styles.css
+++ b/src/adapter/dom-adapter/components/bottom-bar/styles.css
@@ -96,6 +96,7 @@
 
 #bottom-bar .panel {
   overflow: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 #bottom-bar .favorites .favorite {
